--- a/src/pages/Home/Home.scoped.css
+++ b/src/pages/Home/Home.scoped.css
@@ -4,6 +4,12 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  /* overflow-y: hidden; */
+}
+
+.header-home {
+  overflow-x: hidden;
+  margin-top: 30px;
 }
 
 .header-content {
