--- a/src/pages/Product/Product.scoped.css
+++ b/src/pages/Product/Product.scoped.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+.margin-main-top {
+  margin-top: 110px;
+}
+
 .first-column-products {
   color: #6a4029;
 }
